# SpaceBattle

./: .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml  space_battle.cbp
documentation/html/: annotated.html  body_8hpp_source.html  classes.html  classprotocol_1_1_input_connection-members.html  classprotocol_1_1_input_connection.html  classprotocol_1_1_output_connection-members.html  classprotocol_1_1_output_connection.html  classprotocol_1_1client-members.html  classprotocol_1_1client.html  classprotocol_1_1serialize_1_1_body-members.html  classprotocol_1_1serialize_1_1_body.html  classprotocol_1_1server-members.html  classprotocol_1_1server.html  client_8hpp_source.html  data__utils_8hpp_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b4b6fa3d22e8b27ff427bb2cea3b74c.html  dir_bfc45e77520112b140cffab3214f7fed.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  request_8hpp_source.html  response_8hpp_source.html  server_8hpp_source.html  structprotocol_1_1serialize_1_1_header_request-members.html  structprotocol_1_1serialize_1_1_header_request.html  structprotocol_1_1serialize_1_1_header_response-members.html  structprotocol_1_1serialize_1_1_header_response.html  structprotocol_1_1serialize_1_1_header_utility-members.html  structprotocol_1_1serialize_1_1_header_utility.html  structprotocol_1_1serialize_1_1_request-members.html  structprotocol_1_1serialize_1_1_request.html  structprotocol_1_1serialize_1_1_response-members.html  structprotocol_1_1serialize_1_1_response.html
documentation/html/search/: all_0.js  all_1.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
documentation/latex/: annotated.tex  classprotocol_1_1_input_connection.tex  classprotocol_1_1_output_connection.tex  classprotocol_1_1client.tex  classprotocol_1_1serialize_1_1_body.tex  classprotocol_1_1server.tex  dir_7b4b6fa3d22e8b27ff427bb2cea3b74c.tex  dir_bfc45e77520112b140cffab3214f7fed.tex  refman.tex  structprotocol_1_1serialize_1_1_header_request.tex  structprotocol_1_1serialize_1_1_header_response.tex  structprotocol_1_1serialize_1_1_header_utility.tex  structprotocol_1_1serialize_1_1_request.tex  structprotocol_1_1serialize_1_1_response.tex
protocol/: CMakeLists.txt
protocol/include/: Client.hpp  Net.hpp  NetEngine.hpp  NetIO.hpp  NetIOBusinessData.hpp  Server.hpp  client.hpp  server.hpp
protocol/include/serialization/: body.hpp  data_utils.hpp  request.hpp  response.hpp
protocol/src/: Client.cpp  Net.cpp  NetIOBusinessData.cpp  Server.cpp  client.cpp  server.cpp
protocol/src/serialization/: body.cpp  request.cpp  response.cpp
protocol/test/: NetEngine.cpp  NetEngineClientServer.cpp  NetTest.cpp  client.cpp  serializationTest.cpp  server.cpp
protocol/test/stubs/: client.cpp  server.cpp
protocol/test/unit_test/: data_serialization.cpp  test_protocole.cpp
server/: CMakeLists.txt
server/include/: chat_room.hpp  game_room.hpp  general_room.hpp  input_connection_pool.hpp  non_copyable.hpp  protocol.hpp  request_processer.hpp  room.hpp  room_information.hpp  room_interface.hpp  server_engine.hpp
server/src/: chat_room.cpp  game_room.cpp  general_room.cpp  input_connection_pool.cpp  main.cpp  protocol.cpp  request_processer.cpp  room.cpp  room_interface.cpp  server_engine.cpp
server/test/: CMakeLists.txt  simple_test.cpp  test_main.cpp
server/test/client/: SimpleClient.cpp  client.cpp  client_simple_join.cpp
server/test/include/: simple_client.hh
